--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="mui-container">
       <div class="mui-panel">
         <h1>Building...</h1>
-        <button class="mui-btn mui-btn--primary mui-btn--raised">My card</button>
+        <button class="mui-btn mui-btn--primary mui-btn--raised" onclick="window.open('https://mengyao.co/users/48468')">My card</button>
       </div>
     </div>
   </body>
